added background img and logo img elements and starting to flex the form element

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img id="left-background" src="" alt="">
+    <img id="background-image" src="background.jpg" alt="background image">
+    <span id="logo-back">ODIN</span>
+    <img id="odin-logo" src="odin-lined.png" alt="Odin Logo">
     <form action="" method="post">
-        <div id="fname">
-            <label for="first-name">First Name</label>
-            <input type="text" id="first-name" required>
-        </div>
-        <div id="lname">
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" required>
+        <div class="name">
+            <div id="fname">
+                <label for="first-name">First Name</label>
+                <input type="text" id="first-name" required>
+            </div>
+            <div id="lname">
+                <label for="last-name">Last Name</label>
+                <input type="text" id="last-name" required>
+            </div>
         </div>
         <div id="email-div">
             <label for="email">Email</label>
