--- a/index.html
+++ b/index.html
@@ -12,33 +12,31 @@
     <span id="logo-back">ODIN</span>
     <img id="odin-logo" src="odin-lined.png" alt="Odin Logo">
     <form action="" method="post">
-        <div class="name">
-            <div id="fname">
-                <label for="first-name">First Name</label>
-                <input type="text" id="first-name" required>
-            </div>
-            <div id="lname">
-                <label for="last-name">Last Name</label>
-                <input type="text" id="last-name" required>
-            </div>
+        <div class="form-group">
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" required>
         </div>
-        <div id="email-div">
+        <div class="form-group">
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" required>
+        </div>
+        <div class="form-group">
             <label for="email">Email</label>
             <input type="email" id="email" required>
         </div>
-        <div id="phone-div">
+        <div class="form-group">
             <label for="phone">Phone Number</label>
             <input type="number" id="phone">
         </div>
-        <div id="pass-div">
+        <div class="form-group">
             <label for="password">Password</label>
             <input type="password" id="password" required>
         </div>
-        <div id="pass-confirm-div">
+        <div class="form-group">
             <label for="pass-confirm">Confirm Password</label>
             <input type="password" id="pass-confirm" required>
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit">Sign-up</button>
     </form>
 </body>
 </html>
