--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     <span id="logo-back">ODIN</span>
     <img id="odin-logo" src="odin-lined.png" alt="Odin Logo">
     <form action="" method="post">
-        <div class="form-group">
+        <div class="form-group top-column">
             <label for="first-name">First Name</label>
             <input type="text" id="first-name" required>
         </div>
-        <div class="form-group">
+        <div class="form-group top-column">
             <label for="last-name">Last Name</label>
             <input type="text" id="last-name" required>
         </div>
-        <div class="form-group">
+        <div class="form-group top-column">
             <label for="email">Email</label>
             <input type="email" id="email" required>
         </div>
-        <div class="form-group">
+        <div class="form-group bottom-column">
             <label for="phone">Phone Number</label>
             <input type="number" id="phone">
         </div>
-        <div class="form-group">
+        <div class="form-group bottom-column">
             <label for="password">Password</label>
             <input type="password" id="password" required>
         </div>
-        <div class="form-group">
+        <div class="form-group bottom-column">
             <label for="pass-confirm">Confirm Password</label>
             <input type="password" id="pass-confirm" required>
         </div>
