added 2 paragraphs and to log in if account created section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <img id="background-image" src="background.jpg" alt="background image">
     <span id="logo-back">ODIN</span>
     <img id="odin-logo" src="odin-lined.png" alt="Odin Logo">
+    <p id="long-paragraph">This is not a real online service! You know you need something like this
+        like this in your life to help your relize your deepest dreams. Sign up 
+        <em>now</em> to get started.
+    </p>
+    <p id="short-paragraph">You <em>know</em> you want to.</p>
     <form action="" method="post">
         <div class="form-group top-column">
             <label for="first-name">First Name</label>
@@ -38,5 +43,6 @@
         </div>
         <button type="submit">Sign-up</button>
     </form>
+    <p id="account-made">Already have an account? <a href="url">Log in</a></p>
 </body>
 </html>
