--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
     </p>
     <p id="short-paragraph">You <em>know</em> you want to.</p>
     <form action="" method="post">
-        <div class="form-group top-column">
+        <div class="form-group">
             <label for="first-name">First Name</label>
-            <input type="text" id="first-name" required>
+            <input type="text" id="first-name" name="fName" required>
         </div>
-        <div class="form-group top-column">
+        <div class="form-group">
             <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" required>
+            <input type="text" id="last-name" name="lName" required>
         </div>
-        <div class="form-group top-column">
+        <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" required>
+            <input type="email" id="email" name="email" required>
         </div>
-        <div class="form-group bottom-column">
+        <div class="form-group">
             <label for="phone">Phone Number</label>
-            <input type="number" id="phone">
+            <input type="number" id="phone" name="phone" >
         </div>
-        <div class="form-group bottom-column">
+        <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" required>
+            <input type="password" id="password" name="password" required>
         </div>
-        <div class="form-group bottom-column">
+        <div class="form-group">
             <label for="pass-confirm">Confirm Password</label>
-            <input type="password" id="pass-confirm" required>
+            <input type="password" id="pass-confirm" name="confirmPass" required>
         </div>
         <button type="submit">Sign-up</button>
     </form>
