--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     <form action="" method="post">
         <div class="form-group">
             <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="fName" required>
+            <input type="text" id="first-name" name="fName" placeholder="John" required>
         </div>
         <div class="form-group">
             <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="lName" required>
+            <input type="text" id="last-name" name="lName" placeholder="Doe" required>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" placeholder="jdoe@gmail.com" required>
         </div>
         <div class="form-group">
             <label for="phone">Phone Number</label>
-            <input type="number" id="phone" name="phone" >
+            <input type="text" id="phone" name="phone" pattern="^\(?(\d{3})\)?[- ]?(\d{3})[- ]?(\d{4})$" placeholder="999-999-9999" />
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
         </div>
         <div class="form-group">
             <label for="pass-confirm">Confirm Password</label>
